fixed multitrack in dark mode

--- a/src/_includes/blocks/multitrack-calendar/multitrack-calendar.css
+++ b/src/_includes/blocks/multitrack-calendar/multitrack-calendar.css
@@ -35,6 +35,7 @@
     grid-template-columns: 1fr;
     grid-template-areas: "time" "title";
     align-content: start;
+    color: inherit;
 
     &:has(.event-subtitle) {
       grid-template-areas: "time" "title" "subtitle";
